# regex-schema

./: README.md  regex-schema.cabal  stack.yaml
src/Text/Regex/: Schema.hs
src/Text/Regex/Schema/: Core.hs  StringLike.hs
