name:                regex-schema
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/UweSchmidt/regex-schema#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          Uwe Schmidt <uwe@fh-wedel.de>
copyright:           Copyright (c) 2017- Uwe Schmidt
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Regex.Schema.Core
                       Text.Regex.Schema

  other-modules:       Text.Regex.Schema.StringLike
  
  build-depends:       base               >= 4     && < 5
                     , bytestring         >= 0.10
                     , hxt-charproperties >= 9     && < 10
                     , parsec             >= 2.1   && < 4
                     , text               >= 0.10
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/regex-schema
